2010-06-15  Patrick Gansterer  <paroga@paroga.com>

Reviewed by David Levin.

        Buildfix for ResourceHandleWin after r24202 and r55542.
        https://bugs.webkit.org/show_bug.cgi?id=32963

        * platform/network/win/ResourceHandleWin.cpp:
        (WebCore::ResourceHandle::onHandleCreated):
        (WebCore::ResourceHandle::onRequestComplete):
        (WebCore::transferJobStatusCallback):
        (WebCore::ResourceHandle::start):

git-svn-id: svn://svn.chromium.org/blink/trunk@61183 bbb929c8-8fbe-4397-9dbb-9b2b20218538